updates for API

--- a/WebAPI/appsettings.json
+++ b/WebAPI/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "Default": "server = localhost;database=myHSPA;User Id=sa;Password=Fatima@2020; Encrypt= False;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
