--- a/WebAPI/Properties/launchSettings.json
+++ b/WebAPI/Properties/launchSettings.json
@@ -1,4 +1,5 @@
 ﻿{
+
   "$schema": "http://json.schemastore.org/launchsettings.json",
   
   "profiles": {
@@ -9,7 +10,7 @@
       "launchUrl": "api/city",
       "applicationUrl": "http://localhost:5180",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Production"
+        "ASPNETCORE_ENVIRONMENT": "Development"
       }
     }
   }
