updat all api and front

--- a/WebAPI/appsettings.json
+++ b/WebAPI/appsettings.json
@@ -4,7 +4,7 @@
   },
 
   "ConnectionStrings": {
-    "Default": "server=hspa.database.windows.net;database=hspa;User Id=rwahdan;Encrypt= True;TrustServerCertificate=True"
+    "Default": "Server=tcp:hspa.database.windows.net,1433;Initial Catalog=hspa2;Persist Security Info=False;User ID=rwahdan;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
   
   "Logging": {
