--- a/Frontend/.gitignore
+++ b/Frontend/.gitignore
@@ -1,6 +1,6 @@
 # See http://help.github.com/ignore-files/ for more about ignoring files.
 
-environments/environment.development.ts
+environment.development.ts
 
 # Compiled output
 /dist
