--- a/WebAPI/appsettings.Development.json
+++ b/WebAPI/appsettings.Development.json
@@ -5,9 +5,17 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+
+  "CloudinarySettings": {
+    "CloudName": "hspa2024",
+    "ApiKey": "334819583972299",
+    "ApiSecret": "M6mwunz9g3seqhMcP_CGV0HCNvc"
+  },
+  
   "ConnectionStrings": {
     "Default": "server=localhost;database=myHSPA;User Id=sa;Encrypt= True;TrustServerCertificate=True"
   },
   "DBPassword" : "Fatima@2020" 
 }
+
 
