--- a/WebAPI/appsettings.json
+++ b/WebAPI/appsettings.json
@@ -3,6 +3,12 @@
   "AppSettings": {
   },
 
+  "CloudinarySettings": {
+    "CloudName": "hspa2024",
+    "ApiKey": "334819583972299",
+    "ApiSecret": "M6mwunz9g3seqhMcP_CGV0HCNvc"
+  },
+
   "ConnectionStrings": {
     "Default": "Server=tcp:hspa.database.windows.net,1433;Initial Catalog=hspa2;Persist Security Info=False;User ID=rwahdan;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
