--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
     "@emailjs/browser": "^3.11.0",
+    "@kolkov/ngx-gallery": "^2.0.1",
     "alertifyjs": "^1.13.1",
     "aws-s3-upload-ash": "^1.1.7",
     "aws-sdk": "^2.1529.0",
@@ -36,6 +37,7 @@
     "ngx-bootstrap": "^11.0.2",
     "ngx-device-detector": "^6.0.0",
     "ngx-file-drop": "^16.0.0",
+    "ngx-gallery": "^5.10.0",
     "ngx-pagination": "^6.0.3",
     "ngx-slick-carousel": "^15.0.0",
     "rxjs": "~7.8.0",
