--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -30,8 +30,10 @@
     "buffer": "^6.0.3",
     "file-system": "^2.2.2",
     "fine-uploader": "^5.16.2",
+    "font-awesome": "^4.7.0",
     "fs": "^0.0.1-security",
     "fs-web": "^1.0.1",
+    "hammerjs": "^2.0.8",
     "jquery": "^3.7.1",
     "ng2-file-upload": "^5.0.0",
     "ngx-bootstrap": "^11.0.2",
