--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -45,6 +45,7 @@
     "ngx-slick-carousel": "^15.0.0",
     "rxjs": "~7.8.0",
     "slick-carousel": "^1.8.1",
+    "timespan": "^2.3.0",
     "tslib": "^2.6.2",
     "util": "^0.12.5",
     "zone.js": "~0.13.0"
