--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -36,6 +36,7 @@
     "fs-web": "^1.0.1",
     "hammerjs": "^2.0.8",
     "jquery": "^3.7.1",
+    "jwt-decode": "^4.0.0",
     "ng2-file-upload": "^5.0.0",
     "ngx-bootstrap": "^11.0.2",
     "ngx-device-detector": "^6.0.0",
