--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -37,6 +37,7 @@
     "hammerjs": "^2.0.8",
     "jquery": "^3.7.1",
     "jwt-decode": "^4.0.0",
+    "ng-angular-popup": "^0.5.2",
     "ng2-file-upload": "^5.0.0",
     "ngx-bootstrap": "^11.0.2",
     "ngx-device-detector": "^6.0.0",
