--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -40,6 +40,7 @@
     "ng-angular-popup": "^0.5.2",
     "ng2-file-upload": "^5.0.0",
     "ngx-bootstrap": "^11.0.2",
+    "ngx-countdown": "^17.1.1",
     "ngx-device-detector": "^6.0.0",
     "ngx-file-drop": "^16.0.0",
     "ngx-gallery": "^5.10.0",
