--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -12,6 +12,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^17.3.1",
+    "@angular/cdk": "^16.2.12",
     "@angular/common": "^17.3.1",
     "@angular/compiler": "^17.3.1",
     "@angular/core": "^17.3.1",
@@ -46,6 +47,8 @@
     "ngx-gallery": "^5.10.0",
     "ngx-pagination": "^6.0.3",
     "ngx-slick-carousel": "^15.0.0",
+    "primeicons": "^7.0.0",
+    "primeng": "^17.12.0",
     "rxjs": "~7.8.0",
     "slick-carousel": "^1.8.1",
     "timespan": "^2.3.0",
