--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -36,6 +36,7 @@
     "fs": "^0.0.1-security",
     "fs-web": "^1.0.1",
     "hammerjs": "^2.0.8",
+    "ionic": "^5.4.16",
     "jquery": "^3.7.1",
     "jwt-decode": "^4.0.0",
     "ng-angular-popup": "^0.5.2",
