--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -39,8 +39,10 @@
     "ionic": "^5.4.16",
     "jquery": "^3.7.1",
     "jwt-decode": "^4.0.0",
+    "material-icons": "^1.13.12",
     "ng-angular-popup": "^0.5.2",
     "ng2-file-upload": "^5.0.0",
+    "ng2-material": "^0.8.1",
     "ngx-bootstrap": "^11.0.2",
     "ngx-countdown": "^17.1.1",
     "ngx-device-detector": "^6.0.0",
